# nixobdo-pdf

./: .recent_files.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  build_dmg.sh  setup.iss
.github/: CODEOWNERS
.github/workflows/: deploy.yml  dev-build.yml  release.yml  review.yml  windows-build.yml
src/: app.rs  color_test.rs  document.rs  docx_test.rs  main.rs  scratch.rs  test_pdfium.rs  worker.rs
src/app/: eframe_app.rs  messages.rs  mod.rs  state.rs
src/ui/: chatbot.rs  dialogs.rs  menu_bar.rs  mod.rs  splash.rs  tabs.rs  toast.rs  toolbar.rs  viewer.rs
src/ui/dialogs/: about.rs  ai_summary.rs  custom_color.rs  export.rs  export_progress.rs  llm_settings.rs  mod.rs  password_prompt.rs  rename.rs  update.rs
src/ui/viewer/: central_panel.rs  mod.rs  separator.rs  sidebar.rs
src/worker/: export.rs  mod.rs
website/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
website/src/: App.tsx  index.css
website/src/components/: Footer.tsx  Navbar.tsx
website/src/pages/: Docs.tsx  DocsChangelog.tsx  DocsCommunity.tsx  DocsDownload.tsx  DocsFAQGeneral.tsx  DocsGettingStarted.tsx  DocsShortcuts.tsx  DocsUninstall.tsx  DocsViewing.tsx  Home.tsx  changelog.tsx  community.tsx  disclaimer.tsx  docs.tsx  download.tsx  faq.tsx  features.tsx  getting-started.tsx  home.tsx  privacy-policy.tsx  shortcuts.tsx  terms-of-service.tsx
