[package]
name = "PDFViewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.0"
egui = "0.31.0"
pdfium-render = { version = "0.8.37", features = ["image"] }
image = "0.25.5"
anyhow = "1.0.95"
rfd = "0.15.2"
webbrowser = "1.2.1"
docx-rs = "0.4.20"

[build-dependencies]
winres = "0.1.12"

