[package]
name = "nixobdo-pdf"
version = "0.1.24"
edition = "2021"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["svg", "image"] }
pdfium-render = { version = "0.8.37", features = ["image"] }
image = "0.25.5"
anyhow = "1.0.95"
rfd = "0.17.2"
webbrowser = "1.2.1"
docx-rs = "0.4.20"
zip = "8.6.0"
ureq = "3.3.0"
dirs = "6.0.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
winres = "0.1.12"
